tests/baselines/reference/invalidWhileContinueStatements.errors.txt
invalidWhileContinueStatements.ts(4,1): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
invalidWhileContinueStatements.ts(8,14): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
invalidWhileContinueStatements.ts(14,9): error TS18055: Label 'TWO' used before declaration
invalidWhileContinueStatements.ts(21,9): error TS18055: Label 'THREE' used before declaration
invalidWhileContinueStatements.ts(27,5): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
invalidWhileContinueStatements.ts(37,5): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.


==== invalidWhileContinueStatements.ts (6 errors) ====
    // All errors
    
    // naked continue not allowed
    continue;
    ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
    
    // non-existent label
    ONE:
    while (true) continue TWO;
                 ~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
    
    // continue from inside function
    TWO:
    while (true){
        var x = () => {
            continue TWO;
            ~~~~~~~~~~~~~
!!! error TS18055: Label 'TWO' used before declaration
        }
    }
    
    THREE:
    while (true) {
        var fn = function () {
            continue THREE;
            ~~~~~~~~~~~~~~~
!!! error TS18055: Label 'THREE' used before declaration
        }
    }
    
    // continue forward
    while (true) {
        continue FIVE;
        ~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
        FIVE:
        while (true) { }
    }
    
    // label on non-loop statement
    NINE:
    var y = 12;
    
    while (true) {
        continue NINE;
        ~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
    }